# btr-ros-pkg

./: README.md
btr_ball_detector/: CMakeLists.txt  package.xml
btr_ball_detector/cfg/: detectorParams.cfg
btr_ball_detector/launch/: ball_detector_from_bag.launch  ball_detector_params.yaml
btr_ball_detector/src/: ball_detector_main.cpp  ball_detector_node.cpp  ball_detector_node.h
btr_bfly_camera/: CMakeLists.txt  package.xml
btr_bfly_camera/cfg/: bflyParams.cfg
btr_bfly_camera/launch/: bflyParams.yaml  bfly_start.launch  bfly_view.launch
btr_bfly_camera/src/: btr_bfly_camera_node.cpp
btr_point_tracker/: CMakeLists.txt  package.xml
btr_point_tracker/cfg/: trackerParams.cfg
btr_point_tracker/launch/: point_tracker_from_bag.launch  point_tracker_params.yaml  view.launch
btr_point_tracker/msg/: pointTracks.msg
btr_point_tracker/src/: point_tracker_main.cpp  point_tracker_node.cpp  point_tracker_node.h
src/pkg1/: src1.txt
