<?xml version="1.0"?>
<package>
  <name>btr_bfly_camera</name>
  <version>1.0.0</version>
  <description>
        Package to run image acquisition of the BlackFly Camera from Point Grey. 
        To build the node it is required to have installed FlyCapture2, which is the PointGrey third party SDK. It can be download from point grey web site upon free registration.
        To run the node, a connected BlackFly camera is required.
        The node has two topics from where it outputs two respective messages: sensor_msgs/Image.msg and sensor_msgs/CameraInfo.msg.
        CameraInfo message is valid if an input xml file is provided that describes camera calibration parameters.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="andreu@beta-robots.com">Andreu Corominas Murtra</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <url type="website">http://www.beta-robots.com</url>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <author email="andreu@beta-robots.com">Andreu Corominas Murtra</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  
</package>